--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <a href="https://t.me/korobka_donalda">
     мой тгк <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" width="20" height="20" alt="peepolove">
   </a>
+  <a href="https://www.twitch.tv/donaldpng_">
+    мой твич <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" width="20" height="20" alt="peepolove">
+  </a>
   <script src="script.js"></script>
 </body>
 </html>
