--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,12 +9,22 @@
 
 <body>
   <h1 class="title">привет))</h1>
-  <a href="https://t.me/korobka_donalda">
-    мой тгк <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" width="20" height="20" alt="peepolove">
-  </a>
-  <a href="https://www.twitch.tv/donaldpng_">
-    мой твич <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" width="20" height="20" alt="peepolove">
-  </a>
+
+  <div class="links">
+    <a class="link-item" href="https://t.me/korobka_donalda" target="_blank">
+      мой тгк <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" alt="peepolove">
+    </a>
+    <a class="link-item" href="https://www.twitch.tv/donaldpng_" target="_blank">
+      мой твич <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" alt="peepolove">
+    </a>
+    <a class="link-item" href="https://www.youtube.com/@donaldpng" target="_blank">
+      мой ютуб <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" alt="peepolove">
+    </a>
+    <a class="link-item" href="https://www.tiktok.com/@d0naldpng" target="_blank">
+      мой тикток <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" alt="peepolove">
+    </a>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
