--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+  <button class="theme-toggle" onclick="toggleTheme()">🌙 Тема</button>
+  
   <h1 class="title">привет))</h1>
 
   <div class="links">
