--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
   <div class="links">
     <a class="link-item" href="https://t.me/korobka_donalda" target="_blank">
-      мой тгк <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" alt="peepolove">
+      мой тгк <img src="tgc.png" alt="peepo">
     </a>
     <a class="link-item" href="https://www.twitch.tv/donaldpng_" target="_blank">
-      мой твич <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" alt="peepolove">
+      мой твич <img src="tw.png" alt="peepo">
     </a>
     <a class="link-item" href="https://www.youtube.com/@donaldpng" target="_blank">
-      мой ютуб <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" alt="peepolove">
+      мой ютуб <img src="yt.png" alt="peepo">
     </a>
     <a class="link-item" href="https://www.tiktok.com/@d0naldpng" target="_blank">
-      мой тикток <img src="https://i1.jbzd.com.pl/contents/2022/06/normal/KcgVZlCAr6RIrEncPvM29Pm2ffY1ciCK.png" alt="peepolove">
+      мой тикток <img src="tt.png" alt="peepo">
     </a>
   </div>
 
