--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       мой тгк <img src="tgc.png" alt="peepo">
     </a>
     <a class="link-item" href="https://www.twitch.tv/donaldpng_" target="_blank">
-      мой твич <img src="tw.png" alt="peepo">
+      мой твич <img src="tw2.png" alt="peepo">
     </a>
     <a class="link-item" href="https://www.youtube.com/@donaldpng" target="_blank">
       мой ютуб <img src="yt.png" alt="peepo">
     </a>
     <a class="link-item" href="https://www.tiktok.com/@d0naldpng" target="_blank">
-      мой тикток <img src="tt.png" alt="peepo">
+      мой тикток <img src="tt2.png" alt="peepo">
     </a>
   </div>
 
